try again to fix the cta button above the footer on mobile

--- a/src/components/MainContentWrapper/BuyTickets/index.css
+++ b/src/components/MainContentWrapper/BuyTickets/index.css
@@ -177,6 +177,7 @@
     width: 100%;
     text-align: center;
     margin: 0;
+    border: 1px solid red;
   }
 
   .buy-tickets-right {
@@ -185,6 +186,14 @@
     margin-right: 0;
     float: right;
     height: 250px;
+    border: 1px solid blue;
+  }
+
+  .buy-tickets-btn {
+    padding: 20px 60px;
+    border: 1px solid black;
+    margin: 6px 0;
+    display: block;
   }
 
   .buy-tickets-header-text {
